--- a/app/views/dynamic_pages/show.html.erb
+++ b/app/views/dynamic_pages/show.html.erb
@@ -4,7 +4,7 @@
     <div class="card-body">
       <h5 class="card-title"><%= params[:gossip].title %></h5>
       <p class="card-title"><%= params[:gossip].created_at.strftime("%d/%m/%Y") %></p>
-      <p class="card-title">Le créateur de ce gossip est : <%= link_to params[:gossip].user.first_name , dynamic_pages_user_path(:id => params[:gossip].user.id)%></p>
+      <p class="card-title">Le créateur de ce gossip est : <%= link_to params[:gossip].user.first_name , user_path(:id => params[:gossip].user.id)%></p>
       <p class="card-text"><%= params[:gossip].content %></p>
     </div>
   </div>
