--- a/app/views/dynamic_pages/user.html.erb
+++ b/app/views/dynamic_pages/user.html.erb
@@ -6,7 +6,7 @@
       <p class="card-title"><strong>Age : </strong> <%= params[:user].age %></p>
       <p class="card-title"><strong>De : </strong><%= params[:city].name %></p>
       <p class="card-text"> <strong>Bio :</strong><%= params[:user].description %></p>
-      <p class="card-text"> <strong>A rejoins The Gossip Project le : </strong><%= params[:user].created_at.strftime("%d/%m/%Y") %></p>
+      <p class="card-text"> <strong>A rejoint The Gossip Project le : </strong><%= params[:user].created_at.strftime("%d/%m/%Y") %></p>
       <p class="card-text"> <strong>Le nombre de gossip(s) partagés : </strong><%= params[:nb_gossips] %></p>
     </div>
   </div>
