--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,6 @@
-
 <div class="jumbotron jumbotron-fluid text-center">
   <h1 class="display-4 pt-5 font-weight-bold text-center">Bienvenue sur The Gossip Project</h1>
-  <%= link_to "Rejoignez nous et partagez vos gossips", {controller: "static_pages", action: "index"}, class: "btn btn-danger btn-sm m-3" %>
+  <%= link_to "Partagez votre gossip", new_gossip_path , class: "btn btn-danger btn-sm m-3" %>
 </div>
 
 <div class="col-12 text-center">
@@ -10,7 +9,7 @@
       <div class="card-body">
         <h5 class="mt-0 text-center"><%= gossip.title  %></h5>
         <p class="card-text text-center"> Un gossip de : <%= link_to gossip.user.first_name , user_path(:id => gossip.user.id)%></p>
-        <%= link_to "Afficher ce gossip", show_path(:id => gossip.id), class: 'btn btn-outline-danger btn-sm' %>
+        <%= link_to "Afficher ce gossip", gossip_path(:id => gossip.id), class: 'btn btn-outline-danger btn-sm' %>
       </div>
     </div>
   <% end %>
